opam-version: "1.2"
name: "pla"
version: "1.2"
maintainer: "Leonardo Laguna Ruiz <modlfo@gmail.com>"
author: "Leonardo Laguna Ruiz <modlfo@gmail.com>"
homepage: "https://modlfo.github.io/pla/"
bug-reports: "https://github.com/modlfo/pla/issues"
license: "MIT"
dev-repo: "https://github.com/modlfo/pla.git"

build: [["jbuilder" "build"]]

install: [["jbuilder" "install"]]

remove: [["jbuilder" "uninstall"]]

depends: [
  "jbuilder" {build}
  "ocaml-migrate-parsetree" {build}
]
available: [ ocaml-version >= "4.02.1" & opam-version >= "1.2" ]