opam-version: "2.0"
version: "1.4"
maintainer: "Leonardo Laguna Ruiz <modlfo@gmail.com>"
author: "Leonardo Laguna Ruiz <modlfo@gmail.com>"
synopsis: "Pla is a simple library and ppx syntax extension to create composable templates based on verbatim strings"
homepage: "https://modlfo.github.io/pla/"
bug-reports: "https://github.com/modlfo/pla/issues"
license: "MIT"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" { >= "4.07.0" }
  "dune" { build & >= "2.0" }
  "ppxlib" { >= "0.22.0" }
  "compiler-libs"
]